[gd_scene load_steps=4 format=3 uid="uid://co2ac08qcxsd"]

[ext_resource type="Script" path="res://scripts/UI/dialogue/textbox.gd" id="1_0jhph"]
[ext_resource type="Theme" uid="uid://bdsl22n370u3a" path="res://assets/UI/dialogue/dialogue_theme.tres" id="2_frvvx"]
[ext_resource type="PackedScene" uid="uid://b71vm5sbs8ief" path="res://scenes/UI/dialogue/dialogue_label.tscn" id="3_tb6no"]

[node name="TextboxCanvas" type="CanvasLayer"]
script = ExtResource("1_0jhph")

[node name="TextboxMargin" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -509.0
offset_top = -238.0
offset_right = 510.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_frvvx")

[node name="TextboxPanel" type="PanelContainer" parent="TextboxMargin"]
layout_mode = 2

[node name="TextboxVbox" type="VBoxContainer" parent="TextboxMargin/TextboxPanel"]
layout_mode = 2

[node name="DialogueLabel" parent="TextboxMargin/TextboxPanel/TextboxVbox" instance=ExtResource("3_tb6no")]
layout_mode = 2

[node name="LetterDisplayTimer" type="Timer" parent="."]
wait_time = 0.05
